powo-portal/src/main/frontend/src/sass/components/_article.scss
//
// Article
// --------------------------------------------------

.c-article {
  a {
    color: #4949a3;
    &.collapser {
      color: #333333;
    }
  }
  .mobile-menu {
    background-color: #f2f9f9;
    padding: .75rem 1.25rem;
    border: 1px solid #008285;
    border-width: 1px 0;
    width:100%;
    text-align: left;
    svg {
        right: 29px;
        top: 17px;
        position: absolute;
    }
  }
}
.mobile-menu:before {
  content: "";
}
// Component - Article Header
.c-article-header {
  border-top: 2px solid #e7e7e7;
  border-bottom: 2px solid #e7e7e7;

  > .container {
    display: table;
    width: 100%;
  }
}


// Component - Summary
.c-summary {
  padding: $padding-large-vertical;
  vertical-align: top;

  @media (min-width: $screen-md-min) {
    display: table-cell;
    .details {
      margin-left: 1.5em;
    }
  }
}

.c-summary__heading {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: $font-size-h2;
  @media (min-width: $screen-lg-min) {
    font-size: $font-size-h1;
  }

  small {
    color: #333;
    font-size: $font-size-h4;
  }
}

.c-gallery-header {
  height: 250px;
  background-size: cover;
  background-position: center;
  display: block;

  @media (min-width: $screen-sm-min) {
    height: 400px;
  }

  @media (min-width: $screen-md-min) {
    width: 50%;
    display: table-cell;
  }
  &:focus {
    @include focus-outline--black();
  }

  img {
    height: 100%;
    object-fit: cover;
    width: 100%;
  }
}


// Component - Article Navigation
.c-article-nav {
  background-color: $body-bg;
  border-bottom: 2px solid #CCCCCC;
  padding: 0;
}


// Use to fix the offset when linking to sections on a page e.g. #about-the-authors
// based on https://css-tricks.com/hash-tag-links-padding/
@mixin linked-section-offset($offset) {
  display: block;
  content: " ";
  margin-top: -$offset;
  height: $offset;
  visibility: hidden;
  pointer-events: none;
}

// Component - Article Section
.c-article-section {
  border-bottom: 1px solid #EEEEEE;
  
  h2 {
    &::before {
      @include linked-section-offset(45px);
    }
    .btn {
      font-size: 26px;
      font-weight: 700;
    }
    button {
      &.collapser {
        &:focus {
          @include focus-text();
        }
        &::before {
          margin-top: 7px;
        }
      }
    }
  }
  h3 {
    .btn {
      font-size: 20px;
      font-weight: 700;
    }
    button {
      &.collapser {
        &::before {
          margin-top: 2px;
        }
      }
    }
  }
  button {
    &.collapser {
      white-space: inherit;
      text-align: left; 
      display: inline-flex;

      &::before {
        font-family: 'Glyphicons Halflings';
        font-size: 16px;
        padding-right: 1em;
        color: #333333; 
        margin-top: 4px;
        content: "\e113"; // chevron up
      }
      &.collapsed {
        &::before {
          content: "\e114"; // chevron down
        }
      }
    }

      &:active {
        box-shadow: none; 
      }
  }
}

.c-article-section__content {


  @include make-md-column(9);
  @include make-lg-column(9);

  margin-top: 2em;
  overflow-wrap: break-word;
  @media (min-width: $screen-md-min) {
    float: right!important;
  }

  // Establish a baseline for all content in sections.
  > {
    h2, h3, h4, h5, h6 {
      margin-top: 0;
      margin-bottom: 2rem;
      font-weight: bold;
    }
  }
  > div {
    margin-bottom: 3rem;
  }
  ul, ol, p, cite, span {
    margin-top: 0;
    margin-bottom: 3rem;
  }
}

.c-article-section__title {
  h2 {
    font-weight: bold;
  }
}

.c-article-section__aside {

  @include make-md-column(3);
  @include make-lg-column(3);
  .glyphicon {
    margin-right: 0.5em;
  }
  .includes_data {
    width: 75%;
  }
}

// Component - Lists
%unstyled-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c-plain-list {
  @extend %unstyled-list;
}

.c-reference-list {
  @extend %unstyled-list;
  > li {
    display: inline-block;
  }
}

.c-synonym-list {
  @extend %unstyled-list;
}

.c-distribution-list {
  @extend %unstyled-list;
}

@media (min-width: $screen-sm-min) {
  .two-col {
    @include content-columns(2);
    li:first-of-type:last-of-type {
      display: inline-block;
    }
  }
}

li {
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid;
}


// Navbar - Styling for article.

.navbar--article {
  z-index: 1;
  position: sticky;
  top: 0;
    @media (min-width: $screen-md-min) {
    display: block;
  }
  .navbar-nav--article {

    width: 100%;

    @media (min-width: $screen-sm-min) {
      display: flex;
      align-content: center;
      justify-content: space-between;
      float: none;
    }

    > li {
      flex-grow: 1;
      text-align: center;
    }

    > li > a {
      font-size: 13px;
      color: #333;
      @media (min-width: $screen-md-min) {
        font-size: 15px;
      }
      &:focus {
        @include focus-text();
      }
    }
  }
}

@media (min-width: $screen-sm-min) {
  .navbar-expand-lg .navbar-toggler {
      display: none;
  }
}

#descriptions {
  dl {
    h2 {
      font-size: $font-size-h3;
      margin-top: 0;
    }

    h3 {
      font-size: $font-size-h5;
      font-weight: bold;
    }
  }

  dd {
    padding-bottom: .5em;
  }

  tr {
    border-bottom: 1px solid #ccc;
  }

  td, th {
    padding: 5px;
  }

  thead {
    font-style: italic;
  }

  tbody td:first-child {
    font-style: italic;
  }
}

.mfp-title a {
  color: #dcdcdc;
  text-decoration: underline;
}

